Drop MockBukkit